--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     },
     "devDependencies": {
         "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.2.0",
         "laravel-vite-plugin": "^2.0.0",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.12",
         "vite": "^7.0.4"
     },
     "name": "test-app",
