--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
         "color-convert": "^2.0.1",
         "color-name": "^1.1.4",
         "combined-stream": "^1.0.8",
+        "datatables.net": "^2.3.3",
+        "datatables.net-autofill-bs5": "^2.7.0",
+        "datatables.net-bs5": "^2.3.3",
+        "datatables.net-dt": "^2.3.3",
+        "datatables.net-responsive-bs5": "^3.0.6",
         "delayed-stream": "^1.0.0",
         "detect-libc": "^2.0.4",
         "dunder-proto": "^1.0.1",
@@ -69,6 +74,7 @@
         "hasown": "^2.0.2",
         "is-fullwidth-code-point": "^3.0.0",
         "jiti": "^2.5.1",
+        "jquery": "^3.7.1",
         "lightningcss": "^1.30.1",
         "lightningcss-win32-x64-msvc": "^1.30.1",
         "lodash": "^4.17.21",
