--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
         "esbuild": "^0.25.8",
         "escalade": "^3.2.0",
         "fdir": "^6.4.6",
+        "flowbite": "^3.1.2",
+        "flowbite-datepicker": "^1.3.2",
+        "flowbite-typography": "^1.0.5",
         "follow-redirects": "^1.15.9",
         "form-data": "^4.0.4",
         "fraction.js": "^4.3.7",
@@ -96,6 +99,7 @@
         "rollup": "^4.46.1",
         "rxjs": "^7.8.2",
         "shell-quote": "^1.8.3",
+        "simple-datatables": "^10.0.0",
         "source-map-js": "^1.2.1",
         "string-width": "^4.2.3",
         "strip-ansi": "^6.0.1",
